# XoDos

./: README.md  Test  Win10
.github/workflows/: Clone.yml  Release.yml  Sub.yml  Upload.yml  Upload.yml1  init-submodules.yml
app/: build.gradle
app/src/: XoDosFileManager.java
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak
app/src/main/assets/: xodos.tar.xz
app/src/main/cpp/: Android.mk.bak  CMakeLists.txt  CMakeLists.txt.bak  cpp.7z  newxbox_iso_wrapper.cpp  newxbox_iso_wrapper.cpp.bak  xbox_iso_wrapper.cpp.bak
app/src/main/java/com/termux/app/: TermuxInstaller.java  XboxIsoWrapper.java.bak  XoDosFileManager.java  XoDosFileManager.java.bak  XoDosIsoRebuilder.java.bak  XoDosShortcuts.java  XoDosShortcuts.java.bak  XoDosWizard.java  XoDosWizard.java.bak  file_manager_layout.xml
app/src/main/res/drawable/: idel_l.xml  igame.xml
app/src/main/res/layout/: app_settings_dialog.xml  custom_spinner_dropdown_item.xml  custom_spinner_item.xml  file_manager_layout.xml  file_time.xml  progress_dialog.xml  shortcut_grid_layout.xml  shortcut_item.xml  shortcut_launch_dialog.xml  wizard_dialog.xml
app/src/main/res/values/: arrays.xml  ids.xml  strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-ja/: plurals.xml  strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
termux-x11/src/main/res/xml/: preferences.xml
(+4 files in other folders)
